# ucc

./: Makefile.am  configure.ac  todo.md
config/m4/: configure.m4  ucx.m4  urom.m4
contrib/: Makefile.am  slurm_allreduce_sra_pipeline_perftest.sh  slurm_allreduce_sra_pipeline_sweep.sh  slurm_allreduce_sra_radix_frag_sweep.sh  slurm_alltoall_order_perftest.sh  slurm_alltoall_ordering_perftest.sh  slurm_profile_reduce_scatter.sh
contrib/plugin_opencl/: Makefile.am  ec_opencl.c  mc_opencl.c  test_opencl_plugin.c
docs/allreduce_perf/: README.md  plan-1-host-sra-pipelining.md  plan-2-radix-frag-sweep.md  plan-3-fine-grained-reduce-overlap.md  plan-4-trim-memory-passes.md  plan-5-ring-selection-window.md
src/: Makefile.am
src/components/base/: ucc_base_iface.h
src/components/cl/: ucc_cl.c  ucc_cl_type.h
src/components/cl/basic/: cl_basic.h  cl_basic_context.c  cl_basic_team.c
src/components/cl/doca_urom/: cl_doca_urom.h  cl_doca_urom_context.c
src/components/cl/hier/: cl_hier.c  cl_hier_context.c  cl_hier_team.c
src/components/cl/urom/: Makefile.am  cl_urom.c  cl_urom.h  cl_urom_coll.c  cl_urom_coll.h  cl_urom_context.c  cl_urom_lib.c  cl_urom_team.c
src/components/cl/urom/allreduce/: allreduce.c  allreduce.h
src/components/cl/urom/alltoall/: alltoall.c  alltoall.h
src/components/cl/urom/alltoallv/: alltoallv.c  alltoallv.h
src/components/ec/: ucc_ec.c  ucc_ec_plugin.c  ucc_ec_plugin.h
src/components/ec/cpu/: Makefile.am  ec_cpu.c  ec_cpu.h  ec_cpu_reduce.c  ec_cpu_reduce_threaded.c  ec_cpu_reduce_threaded.h  ec_cpu_thread_pool.c  ec_cpu_thread_pool.h
src/components/mc/: ucc_mc.c  ucc_mc.h  ucc_mc_plugin.c  ucc_mc_plugin.h
src/components/tl/: libucc_la-ucc_tl.lo  ucc_tl.c  ucc_tl.h
src/components/tl/.deps/: libucc_la-ucc_tl.Plo
src/components/tl/cuda/: Makefile.am  tl_cuda.c  tl_cuda.h  tl_cuda_coll.c  tl_cuda_coll.h  tl_cuda_context.c  tl_cuda_team.c
src/components/tl/cuda/allgatherv/: allgatherv.c  allgatherv.h  allgatherv_direct.c
src/components/tl/cuda/alltoall/: alltoall_ce.c
src/components/tl/cuda/alltoallv/: alltoallv_ce.c
src/components/tl/mlx5/: tl_mlx5.c  tl_mlx5_context.c
src/components/tl/nccl/: tl_nccl.c  tl_nccl_context.c
src/components/tl/rccl/: tl_rccl.c  tl_rccl_context.c
src/components/tl/self/: tl_self.c  tl_self_context.c
src/components/tl/sharp/: tl_sharp.c  tl_sharp_context.c
src/components/tl/ucp/: .tl_ucp_context.c.swp  Makefile.am  libucc_tl_ucp.la  libucc_tl_ucp_la-tl_ucp.lo  libucc_tl_ucp_la-tl_ucp_addr.lo  libucc_tl_ucp_la-tl_ucp_coll.lo  libucc_tl_ucp_la-tl_ucp_context.lo  libucc_tl_ucp_la-tl_ucp_ep.lo  libucc_tl_ucp_la-tl_ucp_lib.lo  libucc_tl_ucp_la-tl_ucp_service_coll.lo  libucc_tl_ucp_la-tl_ucp_team.lo  my_ibv_helper.h  tl_ucp.c  tl_ucp.h  tl_ucp_am.h  tl_ucp_coll.c  tl_ucp_coll.h  tl_ucp_congestion.c  tl_ucp_congestion.h  tl_ucp_context.c  tl_ucp_copy.c  tl_ucp_ep.c  tl_ucp_ep.h  tl_ucp_ep_hash.h  tl_ucp_pinger.c  tl_ucp_pinger.h  tl_ucp_sendrecv.c  tl_ucp_sendrecv.h  tl_ucp_service_coll.c  tl_ucp_task.h  tl_ucp_team.c
src/components/tl/ucp/.deps/: libucc_tl_ucp_la-tl_ucp.Plo  libucc_tl_ucp_la-tl_ucp_addr.Plo  libucc_tl_ucp_la-tl_ucp_coll.Plo  libucc_tl_ucp_la-tl_ucp_context.Plo  libucc_tl_ucp_la-tl_ucp_ep.Plo  libucc_tl_ucp_la-tl_ucp_lib.Plo  libucc_tl_ucp_la-tl_ucp_service_coll.Plo  libucc_tl_ucp_la-tl_ucp_team.Plo
src/components/tl/ucp/.libs/: libucc_tl_ucp.la  libucc_tl_ucp.lai  libucc_tl_ucp.so.1  libucc_tl_ucp.so.1.0.0  libucc_tl_ucp.so.1.0.0T
src/components/tl/ucp/allgather/: allgather.c  allgather.h  allgather_knomial.c  allgather_linear.c  allgather_onesided.c  allgather_ring.c  libucc_tl_ucp_la-allgather.lo  libucc_tl_ucp_la-allgather_knomial.lo  libucc_tl_ucp_la-allgather_ring.lo
src/components/tl/ucp/allgatherv/: libucc_tl_ucp_la-allgatherv.lo  libucc_tl_ucp_la-allgatherv_ring.lo
src/components/tl/ucp/allreduce/: allreduce.c  allreduce.h  allreduce_knomial.c  allreduce_ring.c  allreduce_sliding_window.c  allreduce_sliding_window_oshmem.c  allreduce_sliding_window_setup.c  allreduce_sra_knomial.c  libucc_tl_ucp_la-allreduce.lo  libucc_tl_ucp_la-allreduce_knomial.lo  libucc_tl_ucp_la-allreduce_sra_knomial.lo
src/components/tl/ucp/alltoall/: alltoall.c  alltoall.h  alltoall_ca.c  alltoall_onesided.c  alltoall_onesided_ca.c  alltoall_pairwise.c  (+2 more)
src/core/: ucc_coll.c  ucc_context.c  ucc_context.h  ucc_ee.c  ucc_global_opts.c  ucc_global_opts.h  ucc_lib.c  ucc_lib.h  ucc_magic.h  ucc_progress_queue.h  ucc_progress_queue_mt.c  ucc_progress_queue_st.c  ucc_resilience.c  ucc_resilience.h  ucc_service_coll.c  ucc_service_coll.h  ucc_team.c  ucc_team.h
src/schedule/: ucc_schedule.h
src/ucc/api/: ucc.h  ucc_status.h
src/utils/: ucc_compiler_def.h  ucc_component.c  ucc_parser.h  ucc_status.c
test/gtest/: Makefile.am
test/gtest/coll/: test_allreduce.cc
test/gtest/common/: test_ucc.cc  test_ucc.h
test/gtest/core/: test_alltoall.cc  test_hybrid_resilience.cc  test_hybrid_resilience_simple.cc  test_mem_map.cc  test_mem_map.h  test_resilience.cc  test_service_coll.cc
test/mpi/: Makefile.am  main.cc  test_allgather.cc  test_allgatherv.cc  test_allreduce.cc  test_alltoall.cc  test_alltoallv.cc  test_barrier.cc  test_bcast.cc  test_case.cc  test_mem_map.cc  test_mpi.cc  test_mpi.h  test_real_failure.cc  test_reduce.cc  test_reduce_scatter.cc  test_resilience.cc  test_resilience_basic  test_resilience_basic.cc  test_resilience_mpi.cc  test_resilience_simple.cc  test_service_team_rebuild.cc
(+41 files in other folders)
