#
# Copyright (c) 2025, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
#
# This Makefile.am is only for distribution purposes.
# The plugin is built standalone using the plain Makefile.
#
# To build:
#   cd contrib/plugin_opencl
#   make UCC_DIR=/path/to/ucc/install
#

EXTRA_DIST = \
    Makefile \
    mc_opencl.c \
    ec_opencl.c \
    test_opencl_plugin.c
